--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ ul{
 }
 
 .all-container{
-    width: 40%;
+    width: 30%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -113,12 +113,10 @@ ul{
     width: 100%;
     height: auto;
     display: grid;
-    /* flex-direction: column; */
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 1rem;
-    column-gap: 1.5rem;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    row-gap: 0.8rem;
+    justify-content: start;
+    align-items: start;
 }
 
 .input{
@@ -137,6 +135,7 @@ ul{
 }
 
 input{
+    width: 100%;
     padding: 0.8rem 0.6rem;
     background-color: black;
     outline: none;
@@ -156,7 +155,7 @@ textarea {
   color: white;
 }
 
-button{
+.button{
     width: 100%;
     height: auto;
     padding: 0.7rem;
@@ -171,25 +170,32 @@ button{
     color: white;
 }
 
+
 .result-container{
-    background-color: #1F2937;
-    padding: 1.2rem;
-    color: white;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
+    row-gap: 0.6rem;
     /* transition: opacity 1s ease; */
 }
 
-/* .result-container.fade-out {
-    opacity: 0;
-} */
-  
+.result-body-content{
+    width: 100%;
+    height: auto;
+    background-color: #1F2937;
+    padding: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
 
 .result{
     font-size: 1.3rem;
-    line-height: 1.6rem;
+    line-height: 1.7rem;
+    color: white;
 }
+
 .result-content{
     color: #D1D5DB;
     line-height: 1.4rem;
