--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ ul{
     height: auto;
     display: flex;
     flex-direction: column;
-    row-gap: 3rem;
+    row-gap: 2.5rem;
 }
 
 .form-title{
@@ -95,7 +95,7 @@ ul{
     width: 100%;
     height: auto;
     color: white;
-    row-gap: 1rem;
+    row-gap: 0.7rem;
 }
 
 .form-title h2{
@@ -112,9 +112,9 @@ ul{
 .form{
     width: 100%;
     height: auto;
-    display: grid;
+    display: flex;
     flex-direction: column;
-    row-gap: 0.8rem;
+    row-gap: 0.7rem;
     justify-content: start;
     align-items: start;
 }
@@ -140,7 +140,7 @@ input{
     background-color: black;
     outline: none;
     border: 1px solid #374151;
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
 ::placeholder{
@@ -163,9 +163,8 @@ textarea {
     border: none;
     font-size: 0.9rem;
     font-weight: 600;
-    grid-column: 1 / -1;
     margin-top: 1rem;
-    border-radius: 2px;
+    border-radius: 4px;
     background-color: #3B82F6;
     color: white;
 }
@@ -177,7 +176,6 @@ textarea {
     display: flex;
     flex-direction: column;
     row-gap: 0.6rem;
-    /* transition: opacity 1s ease; */
 }
 
 .result-body-content{
@@ -188,6 +186,7 @@ textarea {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
+    border-radius: 4px;
 }
 
 .result{
@@ -201,10 +200,6 @@ textarea {
     line-height: 1.4rem;
     font-size: 1rem;
 }
-
-
-
-
 
 /* Media_Querry */
 
@@ -230,9 +225,8 @@ textarea {
     .form{
         width: 100%;
         height: auto;
-       display: grid;
-       /* flex-direction: column; */
-      grid-template-columns: repeat(1, 1fr);
+       display: flex;
+       flex-direction: column;
       row-gap: 0.7rem;
       justify-content: center;
       align-items: center;
