--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
 
 body{
     background-color: black;
+    overscroll-behavior-y: contain;
 }
 
 .nav{
@@ -129,7 +130,7 @@ ul{
 
 .alert{
     visibility: hidden;
-    font-size: 0.8rem;
+    font-size: 16px;
     font-style: italic;
     color: red;
 }
@@ -146,7 +147,7 @@ input{
 ::placeholder{
 
     color: #787878;
-    font-size: 0.8rem;
+    font-size: 16px;
 }
 
 input[type="number"],
@@ -161,7 +162,7 @@ textarea {
     padding: 0.7rem;
     outline: none;
     border: none;
-    font-size: 0.9rem;
+    font-size: 16px;
     font-weight: 600;
     margin-top: 1rem;
     border-radius: 4px;
